# InfoDash

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md
include/app/: Application.hpp
include/services/: RSSService.hpp  StockService.hpp  WeatherService.hpp
include/ui/: MainWindow.hpp  RSSPanel.hpp  StockPanel.hpp  WeatherPanel.hpp
include/utils/: Config.hpp  HtmlParser.hpp  HttpClient.hpp  ThemeManager.hpp
resources/: infodash.desktop
src/: main.cpp
src/app/: Application.cpp
src/services/: RSSService.cpp  StockService.cpp  WeatherService.cpp
src/ui/: MainWindow.cpp  RSSPanel.cpp  StockPanel.cpp  WeatherPanel.cpp
src/utils/: Config.cpp  HtmlParser.cpp  HttpClient.cpp  ThemeManager.cpp
tests/: rss_autodiscover_test.cpp  stock_debug_test.cpp
